# CMakeList.txt : CMake project for CodilityCpp, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
# add_executable (CodilityCpp "CodilityCpp.cpp" "CodilityCpp.h"  "FrogJump.cpp")
add_executable (CodilityCpp "CodilityCpp.cpp" "CodilityCpp.h"  "MaxCounters.cpp")

# TODO: Add tests and install targets if needed.
