# CMakeList.txt : CMake project for HackerRank, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)
include_directories(Magicspell)
# Add source to this project's executable.
#add_executable (SockMerchant "SockMerchant.cpp" )
add_executable (CountingValleys "CountingValleys.cpp" )

# TODO: Add tests and install targets if needed.
