# CMakeList.txt : CMake project for HackerRank, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)
include_directories(Magicspell)
# Add source to this project's executable.
#add_executable (SockMerchant "SockMerchant.cpp" )
#add_executable (CountingValleys "CountingValleys.cpp" )
#add_executable (JumpingCloud "JumpingCloud.cpp" )
#add_executable (RepeatStrings "RepeatStrings.cpp")
#add_executable (HourGlassSum "HourGlassSum.cpp")
#add_executable (LeftRotation "LeftRotation.cpp")
add_executable (RansomNotes "RansomNotes.cpp")

# TODO: Add tests and install targets if needed.
