# CMakeList.txt : CMake project for HackerRank, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)
include_directories(Magicspell)
# Add source to this project's executable.
#add_executable (SockMerchant "SockMerchant.cpp" )
#add_executable (CountingValleys "CountingValleys.cpp" )
#add_executable (JumpingCloud "JumpingCloud.cpp" )
# add_executable (RepeatStrings "RepeatStrings.cpp")
#add_executable (MinAbsDiff "MinAbsDiff.cpp")
# add_executable (LuckBalance "LuckBalance.cpp")
# add_executable (GreedyFlorist "GreedyFlorist.cpp")
#add_executable (IceCream "IceCream.cpp")
add_executable (BalancedBrackets "BalancedBrackets.cpp")
# TODO: Add tests and install targets if needed.
